@@ -10,6 +10,7 @@
 * Implemented smooth mode for the FIR/IIR type of equalizer which performs the
   cross-fade on the change of filter characteristics.
 * Implemented functions for converting the frequency to a note.
+* Added test build for Windows using MSYS2.
 
 === 1.0.8 ===
 * Added MIDI note to frequency convertion function dspu::midi_note_to_frequency.
